syntax = "proto3";
option cc_enable_arenas = true;

package credit_scoring_learner;

message ParametersRequest {
  string requester = 1;
}

message ParametersResponse {
  repeated float parameters = 1;
}
